ProjectFrame text layouts, prevent user from opening multiple frames, collapse layout on mobile

--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -15,7 +15,11 @@
     @media (min-width: 1024px) { @content; }
   }
 
+  @else if $class == xlg {
+    @media (min-width: 1350px) { @content; }
+  }
+
   @else {
-    @warn "Breakpoint mixin supports: xs, sm, md, lg";
+    @warn "Breakpoint mixin supports: xs, sm, md, lg, xlg";
   }
 }
